--- a/Project 2 Data Modeling With Apache Cassandra/Project 2.ipynb
+++ b/Project 2 Data Modeling With Apache Cassandra/Project 2.ipynb
@@ -238,7 +238,7 @@
    },
    "outputs": [],
    "source": [
-    "# TO-DO: Create a Keyspace \n",
+    "# Creating a Keyspace \n",
     "\n",
     "try:\n",
     "    session.execute(\"\"\"\n",
@@ -268,7 +268,7 @@
    },
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n",
+    "# Setting the keyspace \n",
     "\n",
     "try:\n",
     "    session.set_keyspace('udacity')\n",
@@ -321,7 +321,7 @@
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
+    "## Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
     "## sessionId = 338, and itemInSession = 4\n",
     "\n",
     "# A table specific to the query has to be created \n",
