--- a/Project 2 Data Modeling With Apache Cassandra/Project 2.ipynb
+++ b/Project 2 Data Modeling With Apache Cassandra/Project 2.ipynb
@@ -321,7 +321,7 @@
    },
    "outputs": [],
    "source": [
-    "## Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
+    "## Query 1:  Print artist, song title and song's length in the music app history that was heard during \\\n",
     "## sessionId = 338, and itemInSession = 4\n",
     "\n",
     "# A table specific to the query has to be created \n",
@@ -367,10 +367,10 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
+    "## Inserting values into the table\n",
     "        query = \"INSERT INTO music_library (session_id, item_in_session, artist_name, song_title, song_duration)\"\n",
     "        query = query + \" VALUES (%s, %s, %s, %s, %s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
+    "        ## Assigning the column elements with each column in the INSERT statement.\n",
     "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
     "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
    ]
@@ -401,7 +401,7 @@
     }
    ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "## Executing the select query to verify if the data was entered into the table\n",
     "\n",
     "query = \"SELECT artist_name, song_title, song_duration \\\n",
     "         FROM music_library                            \\\n",
@@ -433,7 +433,7 @@
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
+    "## Select name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
     "## for userid = 10, sessionid = 182\n",
     "\n",
     "# A table specific to the query has to be created \n",
@@ -483,11 +483,11 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
+    "## Inserting values into the table\n",
     "        query = \"INSERT INTO artist_library (user_id, session_id, item_in_session, artist_name    \\\n",
     "                                             ,song_title, first_name, last_name)                  \"\n",
     "        query = query + \" VALUES (%s, %s, %s, %s, %s, %s, %s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
+    "        ## Assigning the column elements with each column in the INSERT statement.\n",
     "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
     "        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4]))"
    ]
@@ -520,7 +520,7 @@
     }
    ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "## Executing the select query to verify if the data was entered into the table\n",
     "\n",
     "query = \"SELECT artist_name, song_title, first_name, last_name \\\n",
     "         FROM artist_library                                   \\\n",
@@ -553,7 +553,7 @@
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "## Select every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "\n",
     "# A table specific to the query has to be created \n",
     "# Here the PRIMARY KEY is chosen to be ((song_title), user_id) being song_title the partition key\n",
@@ -637,7 +637,7 @@
     }
    ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "## Executing the select query to verify if the data was entered into the table\n",
     "\n",
     "select_query = \"SELECT first_name, last_name                   \\\n",
     "                FROM play_history                              \\\n",
@@ -670,7 +670,7 @@
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Drop the table before closing out the sessions"
+    "## Dropping all the tables"
    ]
   },
   {
